<resources>
    <string name="app_name">Food_App</string>
    <string name="MENU">MENU</string>
    <string name="AVAILABILITY">AVAILABILITY</string>
    <string name="ORDERS">ORDERS</string>
    <string name="date_and_time">date</string>
    <string name="order_no">Order No:</string>
    <string name="order_No">525</string>
    <string name="customer_name">name</string>
    <string name="cus_name">Name</string>
    <string name="items">orderitem</string>
    <string name="item_and_quantity">itemandquantity</string>
    <string name="price">price</string>
    <string name="_1000">1000</string>
    <string name="cancel">cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="orders">Orders</string>
    <string name="default_order_time">default_order_time</string>
    <string name="order_no">Order No: </string>
    <string name="ord_number">ord_number</string>
    <string name="order_status">Status: </string>
    <string name="ord_status_placed">ord_status</string>
    <string name="order_items">"Order Items: "</string>
    <string name="ord_total">Rs. </string>
    <string name="price">Price</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_phone_no">Enter Your Phone No ..</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="roll_no">Roll No.</string>
    <string name="submit">SUBMIT</string>
    <string name="radiobutton">Student</string>
    <string name="radiobutton2">Owner</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_branch">Enter Branch</string>
    <string name="enter_roll_number">Enter Roll number</string>
    <string name="deletes_the_menu">Deletes the Menu</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify">Verify OTP</string>
    <string name="enter_your_phone_no">"Enter Phone No.  "</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="radiobutton">Student</string>
    <string name="radiobutton2">Owner</string>
    <string name="enter_name">Name</string>
    <string name="enter_branch">Branch</string>
    <string name="enter_roll_number">"Roll No. "</string>
    <string name="submit">Continue</string>
</resources>