<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <RadioGroup
                    android:id="@+id/radioGroupRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginVertical="16dp">

                <RadioButton
                        android:id="@+id/radioButton"
                        android:checked="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobutton"
                        android:layout_marginHorizontal="8dp" />

                <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radiobutton2"
                        android:layout_marginHorizontal="8dp" />

            </RadioGroup>

            <EditText
                    android:id="@+id/etPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginHorizontal="32dp"
                    android:hint="@string/enter_name"
                    android:inputType="textCapWords"
                    android:layout_marginVertical="16dp"/>

            <EditText
                    android:id="@+id/etBranch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_branch"
                    android:inputType="textCapWords"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"/>

            <EditText
                    android:id="@+id/etRoll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_roll_number"
                    android:inputType="text"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="16dp"/>

            <Button
                    android:id="@+id/btnSubmitProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>