<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.registration">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="450dp"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/namereg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="#0E0E0E"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/branchreg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.701"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/branchreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/branch"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="#151515"
            app:layout_constraintBottom_toTopOf="@+id/rollreg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.795"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/rollreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="492dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/roll_no"
            android:inputType="textPersonName"
            android:textColorHint="#171717"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="286dp"
            android:layout_height="61dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.371"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>